@@ -1639,6 +1639,8 @@ namespace aux {
 		
 		if (e == asio::error::operation_aborted) return;
 
+		mutex::scoped_lock l(m_mutex);
+
 		if (m_abort) return;
 
 		error_code ec;
@@ -2935,11 +2937,11 @@ namespace aux {
 	{
 		eh_initializer();
 
-		do
+		bool stop_loop = false;
+		while (!stop_loop)
 		{
 			error_code ec;
 			m_io_service.run(ec);
-			TORRENT_ASSERT(m_abort == true);
 			if (ec)
 			{
 #ifdef TORRENT_DEBUG
@@ -2949,8 +2951,10 @@ namespace aux {
 				TORRENT_ASSERT(false);
 			}
 			m_io_service.reset();
+
+			mutex::scoped_lock l(m_mutex);
+			stop_loop = m_abort;
 		}
-		while (!m_abort);
 
 #if defined(TORRENT_VERBOSE_LOGGING) || defined(TORRENT_LOGGING)
 		(*m_logger) << time_now_string() << " locking mutex\n";
