@@ -33,6 +33,7 @@
 	  incoming connection
 	* added more detailed instrumentation of the disk I/O thread
 
+	* fixed race condition around m_abort in session_impl
 	* fixed bug in web_peer_connection which could cause a hang when downloading
 	  from web servers
 	* fixed bug in metadata extensions combined with encryption
